compile_fail_tests/destructure/tuple_destructure.rs
const fn into_inner<T>(wrap: (T,)) -> T {
    let (value,) = wrap;
    value
}

fn main() {}
