compile_fail_tests/destructure/tuple_destructure.stderr
error[E0493]: destructor of `(T,)` cannot be evaluated at compile-time
 --> compile_fail_tests/destructure/tuple_destructure.rs:1:24
  |
1 | const fn into_inner<T>(wrap: (T,)) -> T {
  |                        ^^^^ the destructor for this type cannot be evaluated in constant functions
...
4 | }
  | - value is dropped here
